--- a/django/templates/login.html
+++ b/django/templates/login.html
@@ -9,22 +9,25 @@
 <div class="container login-container">
     <div class="login-form-2">
         <h3>Login to Exchange!</h3>
-        <form method="post">
+        <form class="needs-validation" method="post" novalidate>
             {% csrf_token %}
             <div class="form-group">
-                <input name="username" type="text" class="form-control" placeholder="Username"/>
+                <input name="username" type="text" class="form-control" placeholder="Username" required/>
             </div>
             <div class="form-group">
-                <input name="password" type="password" class="form-control" placeholder="Password"/>
+                <input name="password" type="password" class="form-control" placeholder="Password" required/>
             </div>
             <div class="form-group">
-                <input type="submit" class="btnSubmit" value="Login" />
+                <input type="submit" class="btnSubmit" value="Login"/>
             </div>
             <div class="form-group">
-
                 <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
             </div>
         </form>
     </div>
+</div>
+
+<div class="h6 banner-text">
+    <p>Don't you have an account? Sign up <a href="/signup">here</a>.</p>
 </div>
 {% endblock %}
