--- a/django/templates/signup.html
+++ b/django/templates/signup.html
@@ -8,36 +8,36 @@
 
 <div class="container login-container">
     <div class="login-form-2">
-        <!-- <img src="{% static 'img/side.png' %}"> -->
         <h3>Sign up to Exchange!</h3>
 
-        <form method="post">
+        <form class="needs-validation" method="post" novalidate>
             {% csrf_token %}
             <div class="row">
                 <div class="form-group col-md-6">
-                    <input name="firstname" type="text" class="form-control" placeholder="First Name"/>
+                    <input name="firstname" type="text" class="form-control" placeholder="First Name" />
                 </div>
 
                 <div class="form-group col-md-6">
-                    <input name="lastname" type="text" class="form-control" placeholder="Last Name"/>
+                    <input name="lastname" type="text" class="form-control" placeholder="Last Name" required/>
                 </div>
             </div>
 
             <div class="form-group">
-                <input name="username" type="text" class="form-control" placeholder="Username"/>
+                <input name="username" type="text" class="form-control" placeholder="Username" required/>
             </div>
 
             <div class="form-group">
-                <input name="password" type="password" class="form-control" placeholder="Password"/>
+                <input name="password" type="password" class="form-control" placeholder="Password" required/>
             </div>
 
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="Confirm Password"/>
+                <input name="password2" type="password" class="form-control" placeholder="Confirm Password" required/>
             </div>
 
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" required>
                 <label class="ForgetPwd" for="flexCheckDefault">I accept the <a href="#">Terms of Use</a> & <a href="#">Privacy Policy</a>.</label>
+                <div class="invalid-feedback ForgetPwd" style="color: red;">You must agree before submitting.</div>
             </div>
 
             <div class="form-group">
